disabling csrf for fullstack and devstack

--- a/config/fullstack/fullstack.yml
+++ b/config/fullstack/fullstack.yml
@@ -76,3 +76,5 @@ EDXAPP_CMS_SSL_NGINX_FRONTEND_PORT: 443
 NGINX_ENABLE_SSL: %%NGINX_ENABLE_SSL%%
 
 EDXAPP_PYTHON_SANDBOX: false
+
+EDXAPP_CSRF_COOKIE_SECURE: false
